--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
@@ -47,8 +47,8 @@
                         </div>
                     </div>
 
-                    <p class="supporterIconContainer" style="padding-left: .5em;margin: 1em 0 0;">
-                    </p>
+                    <!--<p class="supporterIconContainer" style="padding-left: .5em;margin: 1em 0 0;">
+                    </p>-->
 
                     <div id="collapsiblePendingInstallations" style="margin-top: 2em; display: none;">
                         <emby-collapsible title="${HeaderPendingInstallations}" expanded>
