Hide some UI elements I don't need

--- a/MediaBrowser.WebDashboard/dashboard-ui/home.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/home.html
@@ -2,9 +2,9 @@
 
     <div class="libraryViewNav">
         <button class="pageTabButton is-active" data-index="0">${TabHome}</button>
-        <button class="pageTabButton" data-index="1">${TabNextUp}</button>
+        <button class="pageTabButton hide" data-index="1">${TabNextUp}</button>
         <button class="pageTabButton homeFavoritesTab" data-index="2">${TabFavorites}</button>
-        <button class="pageTabButton" data-index="3">${TabUpcoming}</button>
+        <button class="pageTabButton hide" data-index="3">${TabUpcoming}</button>
     </div>
     <div class="is-active pageTabContent ehsContent" id="homeTab" data-index="0">
         <div class="ui-bar-b readOnlyContent welcomeMessage hide" style="padding: 2em; border-radius: 10px; margin: 2em auto; font-weight: normal;">
