--- a/MediaBrowser.WebDashboard/dashboard-ui/tv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tv.html
@@ -3,11 +3,11 @@
     <div class="libraryViewNav">
         <button class="pageTabButton is-active" data-index="0">${TabSuggestions}</button>
         <button class="pageTabButton" data-index="1">${TabLatest}</button>
-        <button class="pageTabButton" data-index="2">${TabUpcoming}</button>
+        <button class="pageTabButton hide" data-index="2">${TabUpcoming}</button>
         <button class="pageTabButton" data-index="3">${TabShows}</button>
         <button class="pageTabButton" data-index="4">${TabEpisodes}</button>
         <button class="pageTabButton" data-index="5">${TabGenres}</button>
-        <button class="pageTabButton" data-index="6">${TabNetworks}</button>
+        <button class="pageTabButton hide" data-index="6">${TabNetworks}</button>
     </div>
     <div class="is-active pageTabContent ehsContent" id="suggestionsTab" data-index="0">
         <div id="resumableSection" class="homePageSection">
