Changed default selected tabs and moved the download button out of the more-menu

--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -32,6 +32,7 @@
                     <paper-button raised class="subdued btnRecord hide"><iron-icon icon="videocam"></iron-icon><span>${ButtonRecord}</span></paper-button>
                     <paper-button raised class="subdued hide btnCancelRecording"><iron-icon icon="delete"></iron-icon><span>${ButtonCancelRecording}</span></paper-button>
                     <paper-button raised class="subdued btnSync hide"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
+					<paper-button raised class="subdued btnDownload hide" role="button" data-id="download" onclick="ExecuteItemDetailsPageDownload();"><iron-icon icon="file-download"></iron-icon><span>${ButtonDownload}</span></paper-button>
                     <paper-button raised class="subdued btnMoreCommands hide notext"><iron-icon icon="more-vert"></iron-icon></paper-button>
                     <div class="detailUserDataIcons userDataIcons"></div>
                 </div>
