--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -1,9 +1,9 @@
-﻿<div id="moviesPage" data-role="page" data-dom-cache="true" class="page libraryPage backdropPage pageWithAbsoluteTabs collectionEditorPage" data-backdroptype="movie">
+﻿<div id="moviesPage" data-role="page" data-dom-cache="true" class="page libraryPage backdropPage pageWithAbsoluteTabs collectionEditorPage" data-backdroptype="movie" data-default-tab-index-override="1">
 
     <div class="libraryViewNav">
         <button class="pageTabButton is-active" data-index="0">${TabSuggestions}</button>
         <button class="pageTabButton" data-index="1">${TabMovies}</button>
-        <button class="pageTabButton movieTrailersTab" data-index="2">${TabTrailers}</button>
+        <button class="pageTabButton movieTrailersTab hide" data-index="2">${TabTrailers}</button>
         <button class="pageTabButton" data-index="3">${TabCollections}</button>
         <button class="pageTabButton" data-index="4">${TabGenres}</button>
         <button class="pageTabButton movieStudiosTab" data-index="5">${TabStudios}</button>
